# cuMat

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  SparseMatrixOperations.txt
benchmarks/: CMakeLists.txt  CSRMV - 2D-Poisson Matrix.json  Conjugate Gradient - 2D-Poisson Matrix.json  Dotproduct.json  Json.cpp  Linear Combination - Constant Count.json  Linear Combination - Constant Size.json  batched_reductions_22.json  benchmark.h  json_st.cpp  main.cpp
benchmarks/batched_reduction/: CMakeLists.txt  MakePlotsFull.py  MakePlotsLinear.py  main.cpp  reductions.cu  reductions.cuh  reductions.h
benchmarks/conjugate_gradient/: CMakeLists.txt  Implementation_Eigen.cpp  Implementation_cuMat.cu  MakePlots.py  benchmark.h  configuration.json  main.cpp
benchmarks/csrmv/: CMakeLists.txt  Implementation_Eigen.cpp  Implementation_cuBlas.cu  Implementation_cuMat.cu  Implementation_cuMat_CSR.cu  Implementation_cuMat_ELLPACK.cu  MakePlots.py  configuration.json  main.cpp
benchmarks/dotproduct/: CMakeLists.txt  Implementation_CUB.cu  Implementation_Eigen.cpp  Implementation_Thrust.cu  Implementation_cuBlas.cu  Implementation_cuMat.cu  MakePlots.py  main.cpp
benchmarks/gmm/: CMakeLists.txt  GenerateData.py  Implementation_Eigen.cpp  Implementation_cuMat.cu  MakePlots.py  benchmark.h  configuration.json  main.cpp
benchmarks/linear_combination/: CMakeLists.txt  Implementation_Eigen.cpp  Implementation_VexCL.cu  Implementation_cuBlas.cu  Implementation_cuMat.cu  Implementation_tensorflow.py  MakePlots.py  configuration.json  configuration2.json  main.cpp
cuMat/: CMakeLists.txt  Core  Dense  Matrix.h  Sparse
cuMat/src/: Allocator.h  BinaryOps.h  BinaryOpsPlugin.h  BinaryOpsPlugin.inl  CholeskyDecomposition.h  ConjugateGradient.h  Constants.h  Context.h  CublasApi.h  CudaUtils.h  CusolverApi.h  CwiseOp.h  DecompositionBase.h  DenseLinAlgOps.h  DenseLinAlgPlugin.h  DevicePointer.h  DisableCompilerWarnings.h  EigenInteropHelpers.h  Errors.h  ForwardDeclarations.h  IO.h  IterativeSolverBase.h  Iterator.h  LUDecomposition.h  Logging.h  Macros.h  Matrix.h  MatrixBase.h  MatrixBlock.h  MatrixBlockPluginLvalue.h  MatrixBlockPluginRvalue.h  MatrixNullaryOpsPlugin.h  MatrixNullaryOpsPlugin.inl  MultOp.h  NullaryOps.h  NumTraits.h  ProductOp.h  Profiling.h  ReductionAlgorithmSelection.h  ReductionOps.h  (+14 more)
demos/: CMakeLists.txt  Test.cu  Transposing.cu
docs/: 00_Overview.dox  02_Tutorial.dox  03_Benchmarks.dox  04_AdvancedTopics.dox  Advanced_CppCompiler.dox  Advanced_CustomScalarTypes.dox  Advanced_Extending.dox  Doxyfile.in  TutorialBlockAccess.dox  TutorialCWise.dox  TutorialEigenInterop.dox  TutorialExpressionTemplates.dox  TutorialIterativeSolver.dox  TutorialLinAlg.dox  TutorialMatrixClass.dox  TutorialMatrixMultiplication.dox  TutorialReductions.dox  TutorialTransposing.dox
tests/: Barrier.h  CMakeLists.txt  TestBinaryOps.cuh  TestBinaryOps1.cu  TestBinaryOps2.cpp  TestBinaryOps2.cu  TestBlockedConjugateGradient.cu  TestComplexOps.cu  TestCompoundAssignment.cu  TestConjugateGradient.cu  TestContext.cpp  TestDevicePointer.cpp  TestDiagonal.cu  TestEigenInterop.cu  TestIterator.cu  TestLUDecomposition.cu  TestLinAlgOps.cu  TestLinAlgOps.cuh  TestLinAlgOps1.cu  TestLinAlgOps2.cu  TestMatrix.cu  TestMatrixBlock.cu  TestMatrixMultOp.cu  TestNoCUDA.cpp  TestNullaryOps.cu  TestRandom.cu  TestReductionOps.cu  TestReductionOps1.cu  TestReductionOps1b.cu  TestReductionOps2.cu  TestReductionOps3.cu  TestSparseMatrix.cu  TestSparseMultOp.cu  TestTranspose.cu  TestUnaryOps.cu  TestUnaryOps.cuh  TestUnaryOps1.cu  TestUnaryOps2.cu  TestUnaryOps3.cu  TestUnaryOps4.cu  (+2 more)
